# text-to-cypher

./: .env.example  .gitignore  README.md  main.ipynb  pyproject.toml
cypher_slm/: __init__.py  config.py  data.py  evaluation.py  prompts.py  reporting.py  synthetic.py  training.py
tests/: test_data.py  test_evaluation.py  test_reporting.py  test_synthetic.py
